--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -51,6 +51,9 @@
                                     </li>
                                 <% else %>
                                     <li class="nav-item">
+                                        <a class="nav-link light-text">Anonymous User</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link light-text" href="#" data-toggle="modal" data-target="#modalLoginForm">Login</a>
                                     </li>
                                     <li class="nav-item">
