Integrate leaderboard page and application template

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,9 +10,62 @@
   padding: 10px;
   border-radius: 0.2em;
   border: 0 solid transparent;
-  transition: background-color 200ms ease-in-out; }
+  transition: background-color 200ms ease-in-out;
+  font-weight: 500; }
   .st-button:hover {
     cursor: pointer;
     background-color: #BBDEFB; }
+
+.st-button-lg {
+  min-width: 150px;
+  padding: 15px; }
+
+.st-card {
+  border-radius: 0.1em;
+  box-shadow: 0 1rem 8rem rgba(0, 0, 0, 0.33); }
+
+.ct-chart {
+  width: 100%;
+  height: 450px; }
+
+.ct-label {
+  fill: #B3BFE6 !important;
+  color: #B3BFE6 !important;
+  font-weight: 400;
+  font-size: 15px; }
+
+.ct-grid {
+  fill: #B3BFE6 !important;
+  color: #B3BFE6 !important;
+  stroke: #B3BFE6 !important;
+  font-weight: 400; }
+
+.ct-series .ct-bar {
+  stroke: #abb7db; }
+
+.ct-series-a .ct-bar {
+  /* Colour of your bars */
+  stroke: #6379BD; }
+
+.light-text {
+  color: #B3BFE6 !important; }
+
+.dark-text {
+  color: #6379BD !important; }
+
+.d-light-text {
+  color: #435cb7 !important; }
+
+.d-dark-text {
+  color: #212D5A !important; }
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto; }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .res-table {
+    display: block;
+    overflow-x: auto; } }
 
 /*# sourceMappingURL=styles.css.map */
