--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,114 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Server</title>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>StereoTypist</title>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
 
-  <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
-  </body>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="http://52.14.34.73:5120/css/flat.css" rel="stylesheet">
+    <!-- chartist css -->
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    
+    <!-- template CSS -->
+    <link rel="stylesheet" href="css/template.css">
+
+    <body>
+        
+            <div class="container-fluid m-0 p-0 game-container">
+                    <div class="container pt-4">
+                        <div class="row">
+                            <!--Navbar-->
+                            <nav class="navbar navbar-expand-lg no-shadow navbar-dark w-100">
+        
+                                <!-- Navbar brand -->
+                                <a class="navbar-brand light-text font-400" href="/">StereoTypist</a>
+        
+                                <!-- Collapse button -->
+                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                                    aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+        
+                                <!-- Collapsible content -->
+                                <div class="collapse navbar-collapse" id="navbarNav">
+        
+                                    <!-- Links -->
+                                    <ul class="navbar-nav ml-auto">
+                                        <% if user_signed_in? then %>
+                                            <li class="nav-item">
+                                                <a class="nav-link light-text" href="/profile"><%= current_user.display_name %>'s Profile</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link light-text" href="/leaderboard">Leaderboard</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <%= link_to "Sign out", destroy_user_session_path, class: "nav-link light-text" %>
+                                            </li>
+                                        <% else %>
+                                            <li class="nav-item">
+                                                <a class="nav-link light-text">Anonymous User</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link light-text" href="#" data-toggle="modal" data-target="#modalLoginForm">Login</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link light-text" href="#" data-toggle="modal" data-target="#modalRegisterForm">Register</a>
+                                            </li>
+                                        <% end %>
+                                    </ul>
+                                    <!-- Links -->
+                                </div>
+                                <!-- Collapsible content -->
+        
+                            </nav>
+                            <!--/.Navbar-->
+                        </div>
+                    </div>
+                </div>
+                <!-- end of container -->
+
+                <div class="row mt-4 mb-4">
+                    <div class="col">
+
+                        <% if notice || alert then %>
+                            <div class="alert alert-info alert-dismissible">
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                <%= notice %>
+                                <%= alert %>
+                            </div>
+                        <% end %>
+                    </div>
+                </div>
+        
+                <%= yield %>
+                
+        
+        <!-- JQuery -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- Bootstrap tooltips -->
+        <!-- Bootstrap tooltips -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
+        <!-- Bootstrap core JavaScript -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <!-- MDB core JavaScript -->
+        <script type="text/javascript" src="http://52.14.34.73:5120/js/mdb.min.js"></script>
+        <!-- Chartist JavaScript -->
+        <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    </body>
+
 </html>
