--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -13,6 +13,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="http://52.14.34.73:5120/css/flat.css" rel="stylesheet">
+     <!-- chartist css -->
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Custom CSS -->
@@ -69,19 +71,9 @@
                     <!--/.Navbar-->
                 </div>
 
-                <div class="row mt-4 mb-4">
+                                <div class="row mt-4 mb-4">
                     <div class="col">
-
-                        <% if notice || alert then %>
-                            <div class="alert alert-info alert-dismissible">
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                                <%= notice %>
-                                <%= alert %>
-                            </div>
-                        <% end %>
-                        <h2 class="dark-text text-left font-400">Type this text:</h2>
+                        <h2 class="dark-text text-left font-400" id="promptTitle">Type this text:</h2>
                         <div class="light-text" id="promptText"></div>
                     </div>
                 </div>
@@ -107,28 +99,48 @@
                         <h4 class="card-subtitle light-text mb-3" id="gameUrl"></h4>
                     </div>
                     <div class="col-12 text-center">
-                        <button class="st-button" id="startButton">START</button>
+                        <button class="st-button" id="startButton">
+                            <i class="fa fa-play mr-1"></i>
+                            <span>START</span>
+                        </button>
                     </div>
                 </div>
 
-                <div class="row mt-4" id="rank-row">
+                <div class="row mt-4" id="gameinfo-row">
+                    <div class="col-12 text-center">
+                        <h4 class="light-text font-400" id="gameinfo"></h4>
+                    </div>
+                </div>
+
+                <div class="row mt-4 justify-content-center" id="chart-row">
+                    <div class="ct-chart white-text"></div>
+                </div>
+
+                <!-- code for chart  -->
+                <!-- end of the code for chart -->
+
+                <div class="row mt-4" id="players-row">
                     <div class="col-12">
-                        <div class="card">
+                        <div class="card st-card w-75 mx-auto">
                             <!--Table-->
-                            <table class="table">
+                            <table class="table table-hover table-responsive-md">
 
                                 <!--Table head-->
                                 <thead>
                                     <tr>
-                                        <th>#</th>
-                                        <th>WPM</th>
-                                        <th>Name</th>
+                                        <th class="th-lg d-dark-text" style="width: 50px">#</th>
+                                        <th class="th-lg text-left d-dark-text">Player Name</th>
                                     </tr>
                                 </thead>
                                 <!--Table head-->
 
                                 <!--Table body-->
-                                <tbody id="rank-table-body">
+                                <tbody>
+                                    <tr>
+                                        
+                                        <td class="d-light-text" style="width: 50px">1</td>
+                                        <td class="text-left d-light-text">Placeholder</td>
+                                    </tr>
                                 </tbody>
                                 <!--Table body-->
 
@@ -239,8 +251,10 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="http://52.14.34.73:5120/js/mdb.min.js"></script>
+         <!-- Chartist JavaScript -->
+        <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
-        <script src="dist/game.bundle.js"></script>
+        <script src="/dist/game.bundle.js"></script>
     </body>
 
 </html>
