--- a/app/views/game/home.html.erb
+++ b/app/views/game/home.html.erb
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
     <link href="http://52.14.34.73:5120/css/flat.css" rel="stylesheet">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/styles.css">
@@ -19,14 +18,14 @@
     <link rel="stylesheet" href="css/game.css">
 
     <body>
-        <div class="container-fluid m-0 p-0 game-container">
+        <div class="container-fluid m-0 p-0 pb-5 game-container">
             <div class="container pt-4">
                 <div class="row">
                     <!--Navbar-->
                     <nav class="navbar navbar-expand-lg no-shadow navbar-dark w-100">
 
                         <!-- Navbar brand -->
-                        <a class="navbar-brand light-text font-400" href="#">StereoTypist</a>
+                        <a class="navbar-brand light-text font-400" href="/">StereoTypist</a>
 
                         <!-- Collapse button -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -60,61 +59,77 @@
                     <!--/.Navbar-->
                 </div>
 
-                <div class="row mt-4 mb-4">
-                    <div class="col">
-                        <h2 class="dark-text text-left font-400">Type this text:</h2>
-                        <div class="light-text" id="promptText"></div>
-                    </div>
-                </div>
-
-                <div class="row mt-4">
-                    <div class="col text-center">
-                        <!-- Small input -->
-                        <div class="md-form form-sm">
-                            <input type="text" class="form-control form-control-sm light-text" id="typeInput">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row mt-4">
-                    <div class="col text-center">
-                        <h2 class="font-weight-bold light-text" id="wpm"></h2>
-                    </div>
-                </div>
-
-                <div class="row mt-4" id="lobby-row">
-                    <div class="col-12 mb-3 text-center">
-                        <h4 class="card-title mb-2 dark-text mb-3">Send this link to your friends so they can join the fun</h4>
-                        <h4 class="card-subtitle light-text mb-3" id="gameUrl"></h4>
-                    </div>
-                    <div class="col-12 text-center">
-                        <button class="st-button" id="startButton">START</button>
-                    </div>
-                </div>
-
-                <div class="row mt-4" id="rank-row">
+                <div class="row mt-5">
                     <div class="col-12">
-                        <div class="card">
-                            <!--Table-->
-                            <table class="table">
+                        <h1 class="dark-text">Create a new game</h1>
+                    </div>
+                    <div class="col-12 pt-2 text-center">
+                        <a href="/game.html" class="btn-flat d-dark-text st-button st-button-lg">
+                            <i class="fa fa-plus-circle mr-1"></i>
+                            <span>NEW GAME</span>
+                        </a>
+                    </div>
+                </div>
 
-                                <!--Table head-->
-                                <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>WPM</th>
-                                        <th>Name</th>
-                                    </tr>
-                                </thead>
-                                <!--Table head-->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <h1 class="dark-text">Look for an open game</h1>
+                    </div>
+                </div>
 
-                                <!--Table body-->
-                                <tbody id="rank-table-body">
-                                </tbody>
-                                <!--Table body-->
+                <div class="row mt-4">
+                    <div class="col">
+                        <div class="card st-card card-cascade narrower">
 
-                            </table>
-                            <!--Table-->
+                            <!--Card image-->
+                            <div class="view gradient-card-header indigo narrower py-3 mx-4 mb-3 d-flex justify-content-between align-items-center">
+                                <span class="white-text mx-auto">AVAILABLE GAMES</span>
+                            </div>
+                            <!--/Card image-->
+
+                            <div class="px-4">
+
+                                <div class="table-wrapper">
+                                    <!--Table-->
+                                    <table class="table res-table w-100 mb-0">
+
+                                        <!--Table head-->
+                                        <thead>
+                                            <tr>
+                                                <th class="hidden-md-down"> </th>
+                                                <th class="th-lg hidden-md-down">
+                                                    <a>Game ID
+                                                        <i class="fa fa-sort ml-1"></i>
+                                                    </a>
+                                                </th>
+                                                <th class="th-lg">
+                                                    <a href="">Num Players
+                                                        <i class="fa fa-sort ml-1"></i>
+                                                    </a>
+                                                </th>
+                                                <th class="th-lg">
+                                                    <a href="">Join
+                                                        <i class="fa fa-sort ml-1"></i>
+                                                    </a>
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <!--Table head-->
+
+                                        <!--Table body-->
+                                        <tbody id="games-tbody"> </tbody>
+                                        <!--Table body-->
+                                    </table>
+                                    <!--Table-->
+                                </div>
+
+                                <hr class="my-0">
+
+                                <!--Bottom Table UI-->
+                                <div class="d-flex justify-content-between"> </div>
+                                <!--Bottom Table UI-->
+
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -210,14 +225,13 @@
         <!-- JQuery -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <!-- Bootstrap tooltips -->
-        <!-- Bootstrap tooltips -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
         <!-- Bootstrap core JavaScript -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="http://52.14.34.73:5120/js/mdb.min.js"></script>
 
-        <script src="dist/game.bundle.js"></script>
+        <script src="dist/index.bundle.js"></script>
     </body>
 
 </html>
