--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -28,7 +28,7 @@
                     <nav class="navbar navbar-expand-lg no-shadow navbar-dark w-100">
 
                         <!-- Navbar brand -->
-                        <a class="navbar-brand light-text font-400" href="#">StereoTypist</a>
+                        <a class="navbar-brand light-text font-400" href="/">StereoTypist</a>
 
                         <!-- Collapse button -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
