Change some routes

--- a/app/views/game/home.html.erb
+++ b/app/views/game/home.html.erb
@@ -73,7 +73,7 @@
                         <h1 class="dark-text">Create a new game</h1>
                     </div>
                     <div class="col-12 pt-2 text-center">
-                        <a href="/game.html" class="btn-flat d-dark-text st-button st-button-lg">
+                        <a href="/game" class="btn-flat d-dark-text st-button st-button-lg">
                             <i class="fa fa-plus-circle mr-1"></i>
                             <span>NEW GAME</span>
                         </a>
