Change source of CSS/JS

--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -12,7 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="http://52.14.34.73:5120/css/flat.css" rel="stylesheet">
+    <link href="https://aws.andrewarpasi.com/stereotypist-s4-bucket/css/flat.css" rel="stylesheet">
      <!-- chartist css -->
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <!-- Main CSS -->
@@ -250,7 +250,7 @@
         <!-- Bootstrap core JavaScript -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
-        <script type="text/javascript" src="http://52.14.34.73:5120/js/mdb.min.js"></script>
+        <script type="text/javascript" src="https://aws.andrewarpasi.com/stereotypist-s4-bucket/js/mdb.min.js"></script>
          <!-- Chartist JavaScript -->
         <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
