--- a/app/views/game/home.html.erb
+++ b/app/views/game/home.html.erb
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://52.14.34.73:5120/css/flat.css" rel="stylesheet">
+    <link href="https://aws.andrewarpasi.com/stereotypist-s4-bucket/css/flat.css" rel="stylesheet">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Custom CSS -->
@@ -238,7 +238,7 @@
         <!-- Bootstrap core JavaScript -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
-        <script type="text/javascript" src="http://52.14.34.73:5120/js/mdb.min.js"></script>
+        <script type="text/javascript" src="https://aws.andrewarpasi.com/stereotypist-s4-bucket/js/mdb.min.js"></script>
 
         <script src="dist/index.bundle.js"></script>
     </body>
