Use https chartist

--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -14,7 +14,7 @@
     <!-- Material Design Bootstrap -->
     <link href="https://aws.andrewarpasi.com/stereotypist-s4-bucket/css/flat.css" rel="stylesheet">
      <!-- chartist css -->
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Custom CSS -->
@@ -252,7 +252,7 @@
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="https://aws.andrewarpasi.com/stereotypist-s4-bucket/js/mdb.min.js"></script>
          <!-- Chartist JavaScript -->
-        <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
         <script src="/dist/game.bundle.js"></script>
     </body>
