--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <!-- Material Design Bootstrap -->
     <link href="https://aws.andrewarpasi.com/stereotypist-s4-bucket/css/flat.css" rel="stylesheet">
     <!-- chartist css -->
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     
     <!-- template CSS -->
     <link rel="stylesheet" href="css/template.css">
@@ -196,7 +196,7 @@
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="https://aws.andrewarpasi.com/stereotypist-s4-bucket/js/mdb.min.js"></script>
         <!-- Chartist JavaScript -->
-        <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     </body>
 
 </html>
