Update game view table

--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -135,13 +135,7 @@
                                 <!--Table head-->
 
                                 <!--Table body-->
-                                <tbody>
-                                    <tr>
-                                        
-                                        <td class="d-light-text" style="width: 50px">1</td>
-                                        <td class="text-left d-light-text">Placeholder</td>
-                                    </tr>
-                                </tbody>
+                                <tbody id="players-tbody"> </tbody>
                                 <!--Table body-->
 
                             </table>
