--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     
     <!-- template CSS -->
-    <link rel="stylesheet" href="css/template.css">
+    <link rel="stylesheet" href="/css/template.css">
 
     <body>
         
