--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,22 +79,21 @@
                     </div>
                 </div>
                 <!-- end of container -->
-
-                <div class="row mt-4 mb-4">
-                    <div class="col">
-
+                <div class="row m-0">
+                    <div class="col-2 m-0 p-0"></div>
+                    <div class="col-8 m-0 p-0">
                         <% if notice || alert then %>
                             <div class="alert alert-info alert-dismissible">
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
-                                <%= notice %>
+                                <%= notice %>Uh oh something happened
                                 <%= alert %>
                             </div>
                         <% end %>
                     </div>
+                    <div class="col-2 m-0 p-0"></div>
                 </div>
-        
                 <%= yield %>
                 
          <!-- Login Modal -->
