--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -71,6 +71,16 @@
                     <!--/.Navbar-->
                 </div>
 
+                <% if notice || alert then %>
+                    <div class="alert alert-info alert-dismissible">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <%= notice %>
+                        <%= alert %>
+                    </div>
+                <% end %>
+
                                 <div class="row mt-4 mb-4">
                     <div class="col">
                         <h2 class="dark-text text-left font-400" id="promptTitle">Type this text:</h2>
