--- a/app/views/game/home.html.erb
+++ b/app/views/game/home.html.erb
@@ -68,6 +68,16 @@
                     <!--/.Navbar-->
                 </div>
 
+                <% if notice || alert then %>
+                    <div class="alert alert-info alert-dismissible">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <%= notice %>
+                        <%= alert %>
+                    </div>
+                <% end %>
+
                 <div class="row mt-5">
                     <div class="col-12">
                         <h1 class="dark-text">Create a new game</h1>
