--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,7 +87,7 @@
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
-                                <%= notice %>Uh oh something happened
+                                <%= notice %>
                                 <%= alert %>
                             </div>
                         <% end %>
