--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,35 +42,7 @@
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
         
-                                <!-- Collapsible content -->
-                                <div class="collapse navbar-collapse" id="navbarNav">
-        
-                                    <!-- Links -->
-                                    <ul class="navbar-nav ml-auto">
-                                        <% if user_signed_in? then %>
-                                            <li class="nav-item">
-                                                <a class="nav-link light-text" href="/profile"><%= current_user.display_name %>'s Profile</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link light-text" href="/leaderboard">Leaderboard</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <%= link_to "Sign out", destroy_user_session_path, class: "nav-link light-text" %>
-                                            </li>
-                                        <% else %>
-                                            <li class="nav-item">
-                                                <a class="nav-link light-text">Anonymous User</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link light-text" href="#" data-toggle="modal" data-target="#modalLoginForm">Login</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link light-text" href="#" data-toggle="modal" data-target="#modalRegisterForm">Register</a>
-                                            </li>
-                                        <% end %>
-                                    </ul>
-                                    <!-- Links -->
-                                </div>
+                                <%= render "shared/navbar" %>
                                 <!-- Collapsible content -->
         
                             </nav>
