--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,11 @@
         <li class="nav-item">
             <a class="nav-link light-text" href="/leaderboard">Leaderboard</a>
         </li>
+        <% if current_user.results.count > 0 && order(wpm: :desc).limit(1)[0].wpm >= 50 %>
+        <li class="nav-item">
+            <a class="nav-link light-text" href="/texts/new">Submit Texts</a>
+        </li>
+        <% end %>
         <li class="nav-item">
             <%= link_to "Sign out", destroy_user_session_path, class: "nav-link light-text" %>
         </li>
