Material style user forms

--- a/app/views/texts/new.html.erb
+++ b/app/views/texts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row m-0 mt-4 mb-3">
     <div class="col text-center text-white light-text font-400">
-            <h1 class="">Submit Text</h1>
+        <h1>Submit Text</h1>
     </div>
 </div>
 
