--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,62 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="row m-0 mt-4 mb-3">
+    <div class="col text-center text-white light-text font-400">
+      <h1>Edit <%= resource_name.to_s.humanize %></h1>
+    </div>
+</div>
+
+<div class="row m-0">
+    <div class="col-2 m-0 p-0"></div>
+    <div class="col-8 m-0 p-0">
+        <div class="card">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="md-form">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="md-form">
     <%= f.label :display_name %><br />
-    <%= f.text_field :display_name, autocomplete: "display_name" %>
+    <%= f.text_field :display_name, autocomplete: "display_name", class: 'form-control' %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+  <div class="md-form">
+    <%= f.label :password %>
+    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+    <i>(leave blank if you don't want to change it)</i>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="md-form">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
+  <div class="md-form">
+    <%= f.label :current_password %>
+    <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
+    <i>(we need your current password to confirm your changes)</i>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="text-center mt-4">
+    <%= f.submit("Update", class: 'btn btn-default') %>
   </div>
 <% end %>
 
+<div class="text-center mt-4">
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
 
 <%= link_to "Back", :back %>
+<br/>
+<br/>
+</div>
+
+<div class="col-2 m-0 p-0"></div>
+</div>
