--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,44 @@
-<h2>Sign up</h2>
+<div class="row m-0 mt-4 mb-3">
+    <div class="col text-center text-white light-text font-400">
+      <h1>Sign Up</h1>
+    </div>
+</div>
+
+<div class="row m-0">
+    <div class="col-2 m-0 p-0"></div>
+    <div class="col-8 m-0 p-0">
+        <div class="card">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="md-form">
+    <%= f.label :email %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :display_name %><br />
-    <%= f.text_field :display_name, autocomplete: "display_name" %>
+  <div class="md-form">
+    <%= f.label :display_name %>
+    <%= f.text_field :display_name, autocomplete: "display_name", class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="md-form">
     <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="md-form">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="text-center mt-4">
+    <%= f.submit("Sign up", class: 'btn btn-default') %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
+<div class="col-2 m-0 p-0"></div>
+</div>
