--- a/app/views/leaderboard/leaderboard.html.erb
+++ b/app/views/leaderboard/leaderboard.html.erb
@@ -27,7 +27,7 @@
                         <% @leaderboard.each_with_index do |result, index| %>
                         <tr>
                             <th scope="row"><%= index + 1 %></th>
-                            <td><%= result.user.display_name %></td>
+                            <td><a href="/profile/<%= result.user.display_name %>"><%= result.user.display_name %></a></td>
                             <td><%= result.wpm.round(2) %></td>
                         </tr>
                         <% end %>
