--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
 <div class="row m-0">
     <div class="col-2 m-0 p-0"></div>
     <div class="col-8 m-0 p-0">
-        <div class="card" style="padding: 20px;">
+        <div class="card p-4">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
