Integrate timer with game

--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -72,6 +72,9 @@
                     <div class="col text-center">
                         <h2 class="font-weight-bold light-text" id="wpm"></h2>
                     </div>
+                    <div class="col-12 text-center">
+                        <h2 class="font-weight-bold light-text" id="timeleft"></h2>
+                    </div>
                 </div>
 
                 <div class="row mt-4" id="lobby-row">
